@@ -101,5 +101,4 @@ fi
 
 $JAVA_HOME/bin/java \
 -classpath "$SYNAPSE_CLASSPATH" \
--Djava.endorsed.dirs="$SYNAPSE_HOME/lib/endorsed":"$JAVA_HOME/jre/lib/endorsed":"$JAVA_HOME/lib/endorsed" \
 org.apache.synapse.securevault.tool.CipherTool $*
